--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+test.txt
 # Created by https://www.toptal.com/developers/gitignore/api/django,vscode,python,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,vscode,python,linux
 
